--- a/projetos/O Senhor dos Aneis/personagem.html
+++ b/projetos/O Senhor dos Aneis/personagem.html
@@ -78,5 +78,14 @@
         &copy; Todos os direitos reservados.
     </footer>
 </div>
+
+<div id="propaganda">
+    <h2>Oferta</h2>
+    <p>
+        Tudo pela metade do preço.
+        Aproveite antes que acabe.
+    </p>
+</div>
+
 </body>
 </html>
