--- a/projetos/chaves/chaves.html
+++ b/projetos/chaves/chaves.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Chaves</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo.css" media="screen">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 <li><a href="#" title="Ir para Personagens">Personagens</a></li>
                 <li><a href="#" title="Ir para Contato">Contato</a></li>
             </ul>
-        </nav>
+        </nav>  
 
         <p id="info">Fortaleza, 10 de Janeiro de 2006</p>
 
